src/components/css/Shared.css
#content {
    width: 100vw;
    height: 100vh;
    overflow-x: hidden;
    
}

/* Hide scrollbar for Chrome, Safari and Opera */
/* #content::-webkit-scrollbar {
    display: none;
  } */
  



#PinkClouds {
    position: absolute;
    z-index: -1;
    width: 100vw;
    height: 100vh;
}

#BackgroundTeal {
    width: 100vw;
    padding-bottom: 10vh;
    z-index: -1;
    background: white;
    opacity: 1;
    transition: opacity .5s ease;
}

#HomeTitle {
    position: absolute;
    top: 10vh;
    width: 100vw;
    height: 4vh;
    text-align: center;
    font-size: 6.5vh;
    font-weight: bold;
    color: rgb(255, 142, 142);
}

#TextBlockDivLeft, #TextBlockDivRight, #TextBlockDivCenter {
    display: inline-block;
    position: relative;
    bottom: 10vh;
    padding-top: 35vh;
}
#TextBlockDivCenter {
    left: 33.5vw;
}
#TextBlockDivLeft {
    left: 14vw;
}
#TextBlockDivRight {
    position: relative;
    left: 22vw;
}




#TextBlockTitle {
    width: 100vw;
    text-align: center;
    font-size: 4vh;
    font-weight: bold;
    color:black;
    padding-bottom: 10px;
    /* border-bottom: 2px solid black; */
}

#AboutTextBlock {
    padding: .5vw;
    width: 30vw;
    text-align: left;
    font-size: 3vh;
    font-weight: bold;
    color: rgb(192,183,248);
    border: solid 2px rgb(192,183,248);
    border-radius: 6px;
}

#VRIcon {
    fill: rgb(192,183,248);
}

#VRIconDiv {
    position: absolute;
    top: 28vh;
    left: 45vw;
}

#YoutubeVideo {
    width: 31vw;
    height: 40vh;
    /* border: solid 2px rgb(192,183,248); */
    border-radius: 6px;
    margin-top: 2vh;
    margin-bottom: 3vh;
}

#SizedImage {
    width: 31vw;
    height: 40vh;
    border: solid 2px rgb(192,183,248);
    border-radius: 6px;
}

#DrumMachineImage {
    width: 31vw;
    height: 40vh;
    border: solid 2px rgb(192,183,248);
    border-radius: 6px;
    transform: rotate(180deg);
}

#RightMediaDiv {
    display: inline-block;
    position: relative;
    left: 21vw;
    width: 30vw;
    height: 40vh;
}

#LeftMediaDiv {
    display: inline-block;
    position: relative;
    left: 16vw;
    width: 30vw;
    height: 40vh;
}

#TextBlockLink {
    color: rgb(192,183,248);
}


#BackgroundVideo {
    position: relative;
    width: 100vw;
    height: 100vh;
    opacity: 75%;

}

#HomeText {
    position: absolute;
    top: 30vh;
    font-size: 16px;
   
    max-width: 33vw;
    left: 32vw;
    padding: 4vh;
    border-radius: 5px;
    background: white;
    font-weight: bold;
    /* color: rgb(163, 148, 255); */
    color: black;
    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
    opacity: 100% !important;
}

.triangle {
    
    border-bottom: 101vh solid rgb(197, 188, 255);;
    border-left: 100vw solid transparent;
    background: none;
    position: absolute;
    bottom: 0vh;
    
}

#text {
    width: 100vw;
    text-align: center;
}

#description {
    position: relative;
    max-width: 33%;
    padding-left: 33%;
    color: black;
    font-weight: bold;
    margin-bottom: 15vh;
}

